Made character maxhp not editable

--- a/less/actors.less
+++ b/less/actors.less
@@ -176,8 +176,10 @@
           font-size: 24px;
         }
 
-        &.multiple input {
-          flex: 0 0 33%;
+        &.multiple {
+          input, .input-balancer {
+            flex: 0 0 33%;
+          }
         }
       }
 
