--- a/me5e.css
+++ b/me5e.css
@@ -651,6 +651,61 @@
   max-height: 90vh;
   overflow-y: auto;
 }
+/* ----------------------------------------- */
+/*  SRD Compendium                           */
+/* ----------------------------------------- */
+.srd-compendium article {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  gap: 1rem;
+}
+.srd-compendium article aside,
+.srd-compendium article .contents {
+  border: 4px solid #ba2828;
+  background: #efefef99;
+}
+.srd-compendium article aside header h2,
+.srd-compendium article .contents header h2 {
+  border: none;
+  background: #ba2828;
+  color: var(--color-text-light-1);
+  padding: 0 0.25rem 0.25rem 0.25rem;
+  margin: 0;
+}
+.srd-compendium article aside section,
+.srd-compendium article .contents section {
+  padding: 0.625rem 1rem;
+}
+.srd-compendium article aside blockquote {
+  border: none;
+  margin: 0;
+  padding: 0;
+}
+.srd-compendium article .contents {
+  flex-grow: 1;
+}
+.srd-compendium article .contents .chapter {
+  margin-bottom: 0.5rem;
+  break-inside: avoid-column;
+}
+.srd-compendium article .contents h3 {
+  border: none;
+  font-weight: bold;
+  font-size: var(--font-size-18);
+  color: var(--color-text-hyperlink);
+}
+.srd-compendium article .contents ul {
+  list-style-type: none;
+  margin: 0 0 0 0.375rem;
+  padding: 0;
+}
+.srd-compendium article .contents ul li {
+  font-size: var(--font-size-16);
+}
+.srd-compendium article .contents section {
+  column-count: 3;
+}
 .me5e.sheet.actor {
   /* ----------------------------------------- */
   /*  Shared Styles                            */
@@ -824,7 +879,8 @@
   font-weight: 400;
   font-size: 24px;
 }
-.me5e.sheet.actor ul.attributes li.attribute .attribute-value.multiple input {
+.me5e.sheet.actor ul.attributes li.attribute .attribute-value.multiple input,
+.me5e.sheet.actor ul.attributes li.attribute .attribute-value.multiple .input-balancer {
   flex: 0 0 33%;
 }
 .me5e.sheet.actor ul.attributes li.attribute .attribute-footer {
@@ -918,10 +974,9 @@
 }
 .me5e.sheet.actor ul.skills-list {
   flex: 0 0 180px;
-  height: 440px;
   list-style: none;
   margin: 0 5px 0;
-  padding: 3px 0 2px;
+  padding: 0;
   border: 2px groove #eeede0;
   border-radius: 3px;
 }
@@ -1650,7 +1705,7 @@
   margin-inline-start: 0.5em;
 }
 .me5e.sheet.item .advancement .items-list .main-controls .configuration-mode-control a {
-  text-align: inline-start;
+  text-align: start;
 }
 .me5e.sheet.item .advancement .items-list .main-controls .item-add {
   padding-block-start: 0.2em;
@@ -1658,10 +1713,12 @@
 .me5e.sheet.item .advancement .items-list .items-header .item-checkmark {
   flex: 0 0 44px;
   color: #119111;
+  text-shadow: white 0 0 1px;
 }
 .me5e.sheet.item .advancement .items-list .items-header .item-warning {
   flex: 0 0 44px;
   color: #faff23;
+  text-shadow: black 0 0 1px;
 }
 .me5e.sheet.item .advancement .items-list .item-name {
   flex: 1 0 10em;
