--- a/templates/advancement/item-grant-config.hbs
+++ b/templates/advancement/item-grant-config.hbs
@@ -9,7 +9,7 @@
   </div>
 
   {{#if showSpellConfig}}
-    {{> "dnd5e.advancement-spell-config"}}
+    {{> "me5e.advancement-spell-config"}}
   {{/if}}
 
   <div class="drop-target">
@@ -20,7 +20,7 @@
         <li class="item flexrow" data-item-uuid="{{this}}">
           <div class="item-name">{{{me5e-linkForUuid this}}}</div>
           <div class="item-controls flexrow">
-            <a class="item-control item-action" data-action="delete" title="{{localize 'DND5E.ItemDelete'}}">
+            <a class="item-control item-action" data-action="delete" title="{{localize 'ME5E.ItemDelete'}}">
               <i class="fas fa-trash"></i>
             </a>
           </div>
