--- a/templates/advancement/parts/advancement-spell-config.hbs
+++ b/templates/advancement/parts/advancement-spell-config.hbs
@@ -1,6 +1,6 @@
 <div class="form-group">
   {{log this}}
-  <label>{{localize "DND5E.AbilityModifier"}}</label>
+  <label>{{localize "ME5E.AbilityModifier"}}</label>
   <div class="form-fields">
     <select name="data.configuration.spell.ability">
       {{selectOptions CONFIG.abilities selected=data.configuration.spell.ability blank="&mdash;"}}
@@ -9,7 +9,7 @@
 </div>
 
 <div class="form-group">
-  <label>{{localize "DND5E.SpellPreparationMode"}}</label>
+  <label>{{localize "ME5E.SpellPreparationMode"}}</label>
   <div class="form-fields">
     <select name="data.configuration.spell.preparation">
       {{selectOptions CONFIG.spellPreparationModes selected=data.configuration.spell.preparation blank="&mdash;"}}
@@ -18,7 +18,7 @@
 </div>
 
 <div class="form-group">
-  <label>{{localize "DND5E.LimitedUses"}}</label>
+  <label>{{localize "ME5E.LimitedUses"}}</label>
   <div class="form-fields">
     <input type="text" name="data.configuration.spell.uses.max" value="{{data.configuration.spell.uses.max}}">
     <select name="data.configuration.spell.uses.per">
