--- a/less/advancement.less
+++ b/less/advancement.less
@@ -136,20 +136,32 @@
       font-size: var(--font-size-14);
     }
     .rolls {
-      display: grid;
-      grid-template-columns: 50% 1fr 1fr;
-      align-items: center;
-      gap: 2px;
+      display: flex;
+      flex-direction: column;
+      align-items: stretch;
+      flex-wrap: nowrap;
+      justify-content: flex-start;
 
-      .averageLabel {
-        span, input { vertical-align: middle; }
-      }
-      .rollResult {
-        text-align: center;
-      }
-      .rollButton {
-        height: calc(var(--form-field-height) + 5px);
-        line-height: 1.5em;
+      .roll {
+        display: grid;
+        grid-template-columns:10% 40% 1fr 1fr;
+        align-items: center;
+        gap: 2px;
+
+        .averageLabel {
+          span, input {
+            vertical-align: middle;
+          }
+        }
+
+        .rollResult {
+          text-align: center;
+        }
+
+        .rollButton {
+          height: calc(var(--form-field-height) + 5px);
+          line-height: 1.5em;
+        }
       }
     }
   }
@@ -158,9 +170,51 @@
     outline: 2px solid red;
   }
 
+  form[data-type="ItemGrant"] {
+    max-height: 400px;
+
+    .level-group {
+      .level-header {
+        width: 40%;
+        border-bottom: 2px solid var(--color-underline-header);
+      }
+      .grant-group {
+        margin-bottom: 20px;
+
+        .grant-header {
+          height: 33px;
+
+          margin-bottom: 5px;
+          padding-bottom: 3px;
+
+          border-bottom: 1px solid var(--color-underline-header);
+
+          h3 {
+            height: fit-content;
+            align-self: center;
+            margin: 0;
+
+            font-size: var(--font-size-18);
+          }
+
+          .header-image {
+            flex: 0 0 30px;
+            background-size: cover;
+            background-position: 50% 0;
+            margin-inline-end: 5px;
+          }
+        }
+      }
+    }
+  }
+
   form[data-type="ScaleValue"] {
+    h3 {
+      margin: 0;
+      border-bottom: 1px solid var(--color-underline-header);
+    }
     p {
-      margin-block-end: 0;
+      margin: 0 0 20px;
       font-size: var(--font-size-18);
     }
     span.none { font-style: italic; }
