--- a/templates/apps/ability-config.hbs
+++ b/templates/apps/ability-config.hbs
@@ -30,5 +30,8 @@
     <p class="notes">{{localize "ME5E.AbilityCheckGlobalBonusHint"}}</p>
   </div>
 
+  <h3 class="form-header">{{localize "ME5E.Modifiers"}}</h3>
+  <template id="modifiers"></template>
+
   <button type="submit"><i class="far fa-save"></i> {{ localize "Submit"}}</button>
 </form>
