--- a/templates/items/parts/item-activation.hbs
+++ b/templates/items/parts/item-activation.hbs
@@ -4,7 +4,7 @@
     <div class="form-fields">
         <input type="number" step="any" name="system.activation.cost"
             value="{{system.activation.cost}}" placeholder="&mdash;">
-        <select name="system.activation.type" title="{{localize 'DND5E.ItemActivationType'}}">
+        <select name="system.activation.type" title="{{localize 'ME5E.ItemActivationType'}}">
             {{selectOptions config.abilityActivationTypes selected=system.activation.type blank=""}}
         </select>
     </div>
@@ -36,17 +36,17 @@
     <div class="form-fields">
         <input type="number" step="any" name="system.target.value"
             value="{{system.target.value}}" placeholder="&mdash;">
-        <select name="system.target.units" title="{{localize 'DND5E.TargetUnits'}}">
+        <select name="system.target.units" title="{{localize 'ME5E.TargetUnits'}}">
             {{selectOptions config.movementUnits selected=system.target.units blank=""}}
         </select>
-        <select name="system.target.type" title="{{localize 'DND5E.TargetType'}}">
+        <select name="system.target.type" title="{{localize 'ME5E.TargetType'}}">
             {{#select system.target.type}}
                 <option value=""></option>
-                <option value="none">{{localize "DND5E.None"}}</option>
-                <optgroup label="{{localize 'DND5E.TargetTypeIndividual'}}">
+                <option value="none">{{localize "ME5E.None"}}</option>
+                <optgroup label="{{localize 'ME5E.TargetTypeIndividual'}}">
                     {{selectOptions config.individualTargetTypes}}
                 </optgroup>
-                <optgroup label="{{localize 'DND5E.TargetTypeArea'}}">
+                <optgroup label="{{localize 'ME5E.TargetTypeArea'}}">
                     {{selectOptions config.areaTargetTypes labelAttr="label"}}
                 </optgroup>
             {{/select}}
@@ -88,8 +88,8 @@
     <div class="form-fields">
         <input type="number" step="any" name="system.duration.value"
             value="{{system.duration.value}}" placeholder="&mdash;"
-            title="{{localize 'DND5E.DurationValue'}}">
-        <select name="system.duration.units" title="{{localize 'DND5E.DurationType'}}">
+            title="{{localize 'ME5E.DurationValue'}}">
+        <select name="system.duration.units" title="{{localize 'ME5E.DurationType'}}">
             {{selectOptions config.timePeriods selected=system.duration.units blank=""}}
         </select>
     </div>
@@ -124,14 +124,14 @@
 <div class="form-group uses-per">
     <label>{{ localize "ME5E.ConsumeTitle" }}</label>
     <div class="form-fields">
-        <select name="system.consume.type" title="{{localize 'DND5E.ConsumeType'}}">
+        <select name="system.consume.type" title="{{localize 'ME5E.ConsumeType'}}">
             {{selectOptions config.abilityConsumptionTypes selected=system.consume.type blank=""}}
         </select>
-        <select name="system.consume.target" title="{{localize 'DND5E.ConsumeTarget'}}">
+        <select name="system.consume.target" title="{{localize 'ME5E.ConsumeTarget'}}">
             {{selectOptions abilityConsumptionTargets selected=system.consume.target blank=""}}
         </select>
         <input type="number" step="any" name="system.consume.amount"
-            value="{{system.consume.amount}}" title="{{localize 'DND5E.ConsumeQuanity'}}">
+            value="{{system.consume.amount}}" title="{{localize 'ME5E.ConsumeQuanity'}}">
     </div>
 </div>
 {{/if}}
