Removed Hon and San, changed ability localisation to a tree structure

--- a/templates/actors/character-ability-scores.hbs
+++ b/templates/actors/character-ability-scores.hbs
@@ -19,8 +19,8 @@
         <div class="mod">
             {{#if @root.editable}}
             <button type="button" class="config-button unbutton" data-action="showConfiguration" data-config="ability"
-                    data-tooltip="{{ localize 'ME5E.AbilityConfigure' ability=label }}"
-                    aria-label="{{ localize 'ME5E.AbilityConfigure' ability=label }}">
+                    data-tooltip="{{ localize 'ME5E.Ability.Configure' ability=label }}"
+                    aria-label="{{ localize 'ME5E.Ability.Configure' ability=label }}">
                 <i class="fas fa-cog" inert></i>
             </button>
             {{else}}
