--- a/templates/actors/embeds/npc-embed.hbs
+++ b/templates/actors/embeds/npc-embed.hbs
@@ -9,9 +9,9 @@
                 <table>
                     <thead>
                         <tr>
-                            <th scope="col" class="visually-hidden">{{ localize "ME5E.Ability" }}</th>
-                            <th scope="col" class="visually-hidden">{{ localize "ME5E.AbilityScoreShort" }}</th>
-                            <th scope="col">{{ localize "ME5E.AbilityModifierShort" }}</th>
+                            <th scope="col" class="visually-hidden">{{ localize "ME5E.Ability.Label" }}</th>
+                            <th scope="col" class="visually-hidden">{{ localize "ME5E.Ability.Score.Short" }}</th>
+                            <th scope="col">{{ localize "ME5E.Ability.Modifier.Short" }}</th>
                             <th scope="col">{{ localize "ME5E.SavingThrowShort" }}</th>
                         </tr>
                     </thead>
