--- a/templates/actors/tabs/character-inventory.hbs
+++ b/templates/actors/tabs/character-inventory.hbs
@@ -9,7 +9,7 @@
                 hasBreakpoints=true }}
             <div class="info">
                 <div class="strength">
-                    <span class="label">{{ localize "ME5E.AbilityStr" }}</span>
+                    <span class="label">{{ localize "ME5E.Ability.Str.Label" }}</span>
                     <span class="value">{{ system.abilities.str.value }}</span>
                 </div>
                 <div class="size">
