--- a/templates/actors/tabs/creature-spells.hbs
+++ b/templates/actors/tabs/creature-spells.hbs
@@ -21,7 +21,7 @@
             </div>
             <div class="info">
                 <div class="ability">
-                    <span class="label">{{ localize "ME5E.Ability" }}</span>
+                    <span class="label">{{ localize "ME5E.Ability.Label" }}</span>
                     <span class="value">{{ me5e-formatModifier ability.mod }}</span>
                 </div>
                 <div class="attack">
