--- a/templates/actors/vehicle/stations.hbs
+++ b/templates/actors/vehicle/stations.hbs
@@ -182,7 +182,7 @@
 {{#*inline ".header"}}
 <div class="header">
     <div></div><div></div><div></div>
-    <div class="roboto-upper">{{ localize "ME5E.AbilityModifierShort" }}</div>
+    <div class="roboto-upper">{{ localize "ME5E.Ability.Modifier.Short" }}</div>
     <div class="roboto-upper">{{ localize "ME5E.SavingThrowShort" }}</div>
     <div></div>
 </div>
@@ -222,7 +222,7 @@
     <div class="config">
         {{#if @root.editable}}
         <button type="button" class="config-button unbutton" data-action="showConfiguration" data-config="ability"
-                data-tooltip aria-label="{{ localize "ME5E.AbilityConfigure" ability=label }}">
+                data-tooltip aria-label="{{ localize "ME5E.Ability.Configure" ability=label }}">
             <i class="fa-solid fa-cog" inert></i>
         </button>
         {{/if}}
