--- a/templates/advancement/parts/advancement-spell-config.hbs
+++ b/templates/advancement/parts/advancement-spell-config.hbs
@@ -1,5 +1,5 @@
 <div class="form-group">
-    <label>{{ localize "ME5E.AbilityModifier" }}</label>
+    <label>{{ localize "ME5E.Ability.Modifier.Label" }}</label>
     <div class="form-fields">
         <multi-select name="configuration.spell.ability">
             {{#each abilities}}
