--- a/templates/chat/roll-dialog.hbs
+++ b/templates/chat/roll-dialog.hbs
@@ -31,7 +31,7 @@
     {{/if}}
     {{#if chooseModifier}}
     <div class="form-group">
-        <label>{{ localize "ME5E.AbilityModifier" }}</label>
+        <label>{{ localize "ME5E.Ability.Modifier.Label" }}</label>
         <select name="ability">
             {{selectOptions abilities selected=defaultAbility labelAttr="label"}}
         </select>
