--- a/templates/items/details/details-equipment.hbs
+++ b/templates/items/details/details-equipment.hbs
@@ -33,7 +33,7 @@
 
             {{!-- Strength Requirement --}}
             {{#if system.isArmor}}
-            {{ formField fields.strength value=source.strength label="ME5E.AbilityStr" placeholder="—" localize=true
+            {{ formField fields.strength value=source.strength label="ME5E.Ability.Str.Label" placeholder="—" localize=true
                          classes="label-top" rootId=partId }}
             {{/if}}
         </div>
