--- a/templates/items/details/details-tool.hbs
+++ b/templates/items/details/details-tool.hbs
@@ -27,7 +27,7 @@
 
             {{!-- Ability --}}
             {{ formField fields.ability value=source.ability choices=CONFIG.abilities labelAttr="label"
-                         label="ME5E.Ability" blank="ME5E.Default" localize=true classes="label-top" rootId=partId }}
+                         label="ME5E.Ability.Label" blank="ME5E.Default" localize=true classes="label-top" rootId=partId }}
         </div>
     </div>
 
