--- a/templates/actors/tabs/character-details.hbs
+++ b/templates/actors/tabs/character-details.hbs
@@ -56,7 +56,7 @@
                 <ul>
                     {{#each saves}}
                     {{> ".ability-prof" path=(concat "system.abilities." @key)
-                        config=(localize "ME5E.AbilityConfigure" ability=label) }}
+                        config=(localize "ME5E.Ability.Configure" ability=label) }}
                     {{/each}}
                 </ul>
             </filigree-box>
