--- a/templates/actors/config/skills-config.hbs
+++ b/templates/actors/config/skills-config.hbs
@@ -7,7 +7,7 @@
             <span class="name">{{ label }}</span>
             <div class="bonus">{{ me5e-formatModifier total }}</div>
             <a class="config-button" data-action="configure" data-tooltip
-               aria-label="{{ localize "ME5E.SkillConfigure" }}">
+               aria-label="{{ localize "ME5E.Skill.Configure" }}">
                 <i class="fa-solid fa-cog" inert></i>
             </a>
         </li>
