--- a/templates/actors/npc-sidebar.hbs
+++ b/templates/actors/npc-sidebar.hbs
@@ -22,10 +22,10 @@
     <div class="pills-group {{#unless skills}}empty{{/unless}}">
         <h3 class="icon">
             <i class="fas fa-briefcase" inert></i>
-            <span class="roboto-upper">{{ localize "ME5E.Skills" }}</span>
+            <span class="roboto-upper">{{ localize "ME5E.Skill.LabelPl" }}</span>
             {{#if editable}}
             <button type="button" class="config-button unbutton" data-action="showConfiguration" data-config="skills"
-                    data-tooltip="ME5E.SkillsConfig" aria-label="{{ localize 'ME5E.SkillsConfig' }}">
+                    data-tooltip="ME5E.Skill.ConfigurePl" aria-label="{{ localize 'ME5E.Skill.ConfigurePl' }}">
                 <i class="fas fa-cog" inert></i>
             </button>
             {{/if}}
