--- a/templates/journal/parts/journal-legacy-traits.hbs
+++ b/templates/journal/parts/journal-legacy-traits.hbs
@@ -18,7 +18,7 @@
     <strong>{{ localize "TYPES.Item.weaponPl" }}:</strong> {{ advancement.traits.weapons }}<br>
     <strong>{{ localize "TYPES.Item.toolPl" }}:</strong> {{ advancement.traits.tools }}<br>
     <strong>{{ localize "ME5E.ClassSaves" }}:</strong> {{ advancement.traits.saves }}<br>
-    <strong>{{ localize "ME5E.Skills" }}:</strong> {{ advancement.traits.skills }}
+    <strong>{{ localize "ME5E.Skill.LabelPl" }}:</strong> {{ advancement.traits.skills }}
 </p>
 {{/if}}
 {{{ enriched.additionalTraits }}}
